Fixed CSS bugs which caused rendering issues on mobile

--- a/style.css
+++ b/style.css
@@ -48,13 +48,16 @@ li
 
 .list-group-item
 {
-	font-size: 16px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	/*margin: 5px;*/
+	font-size: 15px;
 }
 
-.list-group-item .badge
+/*.list-group-item .badge
 {
 	margin-left: 10px;
-}
+}*/
 
 #top
 {
